# blog-explop-com

./: README.md  blog-explop-com.cabal  index.html  package-lock.json  package.json  stack.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes
docs/: CNAME  about.html  archive.html  contact.html  index.html
docs/posts/: 2021-06-07-Running NixOS on Pinebook 1080p.html
posts/: 2021-06-07-Running NixOS on Pinebook 1080p.markdown
src/: consts.ts
src/components/: Footer.astro
src/content/blog/: 2026-02-09-guitar-diy.md  nixos-ssh-wol.md  pocketscore-dev-01.md
src/pages/: index.astro  privacy.astro  privacy.md
templates/: default.html
